# signal

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  README.zh.md
benchmarks/: bench_latency.cpp  bench_overhead.cpp
examples/: event_bus.cpp
include/: signal.hpp
tests/: test_sender.cpp  test_signal.cpp
